--- a/photos_page.html
+++ b/photos_page.html
@@ -10,21 +10,14 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,800&family=Mooli&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/jpg" href="https://cdn-icons-png.flaticon.com/512/57/57162.png" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="photosPage.css">
     <title>InstaMeow</title>
 </head>
 
 <body>
     <header>
         <img src="./img/logo.png" alt="logo" width="300">
-        <nav class="nav-area">
-            <img src="./img/icon_gifPage.png" alt="gifPage" class="aaa">
-            <img src="./img/icon_memePage.png" alt="memePage" class="aaa">
-            <img src="./img/icon_homePage.png" alt="homePage" class="aaa">
-            <img src="./img/icon_factPage.png" alt="factPage" class="aaa">
-            <img src="./img/icon_photosPage.png" alt="photosPage" class="aaa">
-            <img src="./img/menu.png" alt="menu" class="menu">
-        </nav>
+        <img src="./img/menu.png" alt="menu" class="menu">
     </header>
     <main>
         <section class="welcome-message">
@@ -32,13 +25,28 @@
                 <h1>Welcome to InstaMeow!</h1>
                 <h3>Tired of dealing with people and getting disappointed with life? Here is your place!
                     Come to InstaMeow and enjoy kittens that will melt your heart. </h3>
+                    <div class="button_message">
+                    <button>
+                        Explore more 
+                        <img src="./img/seta-direita 1.png" alt="seta-direita" width="30">
+                    </button>
+                </div>
             </div>
             <div class="image">
                 <img src="./img/message-image.png" alt="message-image">
             </div>
-        
-
         </section>
+        <section class="card_container" id="card_container">
+            <img src="./img/cardDecoration.png" alt="cardDecoration" class="cardDecoration" id="cardDecoration">
+            <div class="card" id="card">
+                <img src="./img/PHOTO.png" alt="LALLA" id="image_card">
+                <div class="card_content" id="card_content">
+                    <h4>Bengals are a lot of fun to live with, but they're definitely not the cat for everyone, or for first-time cat owners. Extremely intelligent, curious and active, they demand a lot of interaction and woe betide the owner who doesn't provide it.</h4>
+
+                </div>
+            </div>
+        </section>
+
 
     </main>
 
