parte da pagina principal finalizada em html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InstaMeow</title>
-    <meta http-equiv="refresh" content="3.3; URL='./photos_page.html'"/>
+    <meta http-equiv="refresh" content="4.1; URL='./photos_page.html'"/>
     <link rel="icon" type="image/jpg" href="https://cdn-icons-png.flaticon.com/512/57/57162.png" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="./img/landing_page.gif" alt="start_page" class="image">
-    
+    <img src="./img/start_page.gif" alt="start_page" class="image">
 </body>
 </html>
