--- a/photos_page.html
+++ b/photos_page.html
@@ -25,9 +25,9 @@
                 <h1>Welcome to InstaMeow!</h1>
                 <h3>Tired of dealing with people and getting disappointed with life? Here is your place!
                     Come to InstaMeow and enjoy kittens that will melt your heart. </h3>
-                    <div class="button_message">
+                <div class="button_message">
                     <button>
-                        Explore more 
+                        Explore more
                         <img src="./img/seta-direita 1.png" alt="seta-direita" width="30">
                     </button>
                 </div>
@@ -41,8 +41,21 @@
             <div class="card" id="card">
                 <img src="./img/PHOTO.png" alt="LALLA" id="image_card">
                 <div class="card_content" id="card_content">
-                    <h4>Bengals are a lot of fun to live with, but they're definitely not the cat for everyone, or for first-time cat owners. Extremely intelligent, curious and active, they demand a lot of interaction and woe betide the owner who doesn't provide it.</h4>
-
+                    <h4>Bengals are a lot of fun to live with, but they're definitely not the cat for everyone, or for
+                        first-time cat owners. Extremely intelligent, curious and active, they demand a lot of
+                        interaction and woe betide the owner who doesn't provide it.</h4>
+                    <div class="card_reactions">
+                        <a href="./info_page.html">
+                        <button>See more!
+                            <img src="./img/seta-direita 1.png" alt="seta-direita" width="30">
+                        </button>
+                    </a>
+                        <div class="reactions">
+                        <img src="./img/like.png" alt="like" id="like">
+                        <img src="./img/comment.png" alt="comment" id="comment">
+                        <img src="./img/save.png" alt="save" id="save">
+                    </div>
+                    </div>
                 </div>
             </div>
         </section>
