finalizando html e iniciando javascript

--- a/photos_page.html
+++ b/photos_page.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link rel="icon" type="image/jpg" href="https://cdn-icons-png.flaticon.com/512/57/57162.png" />
     <link rel="stylesheet" href="photosPage.css">
+    <script src="./photos_page.js" defer></script>
     <title>InstaMeow</title>
 </head>
 
@@ -25,40 +26,59 @@
                 <h1>Welcome to InstaMeow!</h1>
                 <h3>Tired of dealing with people and getting disappointed with life? Here is your place!
                     Come to InstaMeow and enjoy kittens that will melt your heart. </h3>
-                <div class="button_message">
-                    <button>
-                        Explore more
-                        <img src="./img/seta-direita 1.png" alt="seta-direita" width="30">
-                    </button>
-                </div>
+                <a href="./info_page.html">
+                    <div class="button_message">
+                        <button>
+                            Explore more
+                            <img src="./img/seta-direita 1.png" alt="seta-direita" width="30">
+                        </button>
+                    </div>
+                </a>
             </div>
             <div class="image">
                 <img src="./img/message-image.png" alt="message-image">
             </div>
         </section>
+
+
         <section class="card_container" id="card_container">
-            <img src="./img/cardDecoration.png" alt="cardDecoration" class="cardDecoration" id="cardDecoration">
-            <div class="card" id="card">
-                <img src="./img/PHOTO.png" alt="LALLA" id="image_card">
-                <div class="card_content" id="card_content">
-                    <h4>Bengals are a lot of fun to live with, but they're definitely not the cat for everyone, or for
-                        first-time cat owners. Extremely intelligent, curious and active, they demand a lot of
-                        interaction and woe betide the owner who doesn't provide it.</h4>
-                    <div class="card_reactions">
-                        <a href="./info_page.html">
-                        <button>See more!
-                            <img src="./img/seta-direita 1.png" alt="seta-direita" width="30">
-                        </button>
-                    </a>
-                        <div class="reactions">
-                        <img src="./img/like.png" alt="like" id="like">
-                        <img src="./img/comment.png" alt="comment" id="comment">
-                        <img src="./img/save.png" alt="save" id="save">
-                    </div>
+            <div class="card-decoration">
+
+
+                <img src="./img/cardDecoration.png" alt="cardDecoration" class="cardDecoration" id="cardDecoration">
+                <div class="card" id="card">
+
+
+                    <img src="./img/PHOTO.png" alt="LALLA" id="image_card">
+
+
+
+
+
+                    <div class="card_content" id="card_content">
+                        <h4>Bengals are a lot of fun to live with, but they're definitely not the cat for everyone, or
+                            for
+                            first-time cat owners. Extremely intelligent, curious and active, they demand a lot of
+                            interaction and woe betide the owner who doesn't provide it.</h4>]
+
+
+                            
+                        <div class="card_reaction">
+                            <a href="./info_page.html">
+                                <button>See more!
+                                    <img src="./img/seta-direita 1.png" alt="seta-direita" width="30">
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
+
+
+
+
 
 
     </main>
