--- a/photos_page.html
+++ b/photos_page.html
@@ -18,7 +18,17 @@
 <body>
     <header>
         <img src="./img/logo.png" alt="logo" width="300">
-        <img src="./img/menu.png" alt="menu" class="menu">
+
+      <div class="nav">
+        <img src="./img/icon_gifPage.png" alt="" class="gifs">
+        <img src="./img/icon_memePage.png" alt="" class="memes">
+        <img src="./img/icon_factPage.png" alt="" class="facts">
+        <img src="./img/icon_homePage.png" alt="" class="home">
+        <img src="./img/icon_photosPage.png" alt="" class="photos">
+        <button class="navbutton">
+            <img src="./img/menu.png" alt="menu" class="menu" width="60px">
+        </button>
+      </div>  
     </header>
     <main>
         <section class="welcome-message">
@@ -39,42 +49,6 @@
                 <img src="./img/message-image.png" alt="message-image">
             </div>
         </section>
-
-
-        <section class="card_container" id="card_container">
-            <div class="card-decoration">
-
-
-                <img src="./img/cardDecoration.png" alt="cardDecoration" class="cardDecoration" id="cardDecoration">
-                <div class="card" id="card">
-
-
-                    <img src="./img/PHOTO.png" alt="LALLA" id="image_card">
-
-
-
-
-
-                    <div class="card_content" id="card_content">
-                        <h4>Bengals are a lot of fun to live with, but they're definitely not the cat for everyone, or
-                            for
-                            first-time cat owners. Extremely intelligent, curious and active, they demand a lot of
-                            interaction and woe betide the owner who doesn't provide it.</h4>]
-
-
-                            
-                        <div class="card_reaction">
-                            <a href="./info_page.html">
-                                <button>See more!
-                                    <img src="./img/seta-direita 1.png" alt="seta-direita" width="30">
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
 
 
 
