--- a/photos_page.html
+++ b/photos_page.html
@@ -49,14 +49,7 @@
                 <img src="./img/message-image.png" alt="message-image">
             </div>
         </section>
-
-
-
-
-
-
+        <div class="card_container" id="card_container"></div>
     </main>
-
 </body>
-
 </html>
