--- a/picture.html
+++ b/picture.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/jpg" href="https://cdn-icons-png.flaticon.com/512/57/57162.png" />
     <link rel="stylesheet" href="picture.css">
     <script src="./picture.js" defer></script>
-    <title>InstaMeow</title>
+    <title>Pictures</title>
 </head>
 
 <body>
